// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title Component render large text 1`] = `
<body>
  <div>
    <p
      style="font-size: 2em; color: red;"
    >
      Large Text
    </p>
  </div>
</body>
`;

exports[`Title Component render small text 1`] = `
<body>
  <div>
    <p
      style="font-size: 0.5em; color: green;"
    >
      Small Text
    </p>
  </div>
</body>
`;
